Fix tile heading alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -68,8 +68,9 @@
   min-height: 150px;
   max-height: 300px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   overflow: hidden;
 }
 
